fix: Scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,15 @@ body {
   max-width: 600px;
   justify-content: center;
 }
+
+body::-webkit-scrollbar {
+  width: 6px;
+  background-color: rgba(49, 49, 49, 0);
+  border-radius: 10px;
+  max-height: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #2dd295;
+  border-radius: 10px;
+}
